Source/Alternet.UI/Native/TextBoxTextAttr.cs

        
        public string GetURL(System.IntPtr attr)
        {
            CheckDisposed();
            var n = NativeApi.TextBoxTextAttr_GetURL_(NativePointer, attr);
            var m = n;
            return m;
        }
        
        public int GetTextEffects(System.IntPtr attr)
        {
            CheckDisposed();
            var n = NativeApi.TextBoxTextAttr_GetTextEffects_(NativePointer, attr);
            var m = n;
            return m;
        }
        
        public int GetTextEffectFlags(System.IntPtr attr)
        {
            CheckDisposed();
            var n = NativeApi.TextBoxTextAttr_GetTextEffectFlags_(NativePointer, attr);
            var m = n;
            return m;
        }
        
        public int GetOutlineLevel(System.IntPtr attr)
        {
            CheckDisposed();
            var n = NativeApi.TextBoxTextAttr_GetOutlineLevel_(NativePointer, attr);
            var m = n;
            return m;
        }
        
        public bool IsCharacterStyle(System.IntPtr attr)
        {
            CheckDisposed();
            var n = NativeApi.TextBoxTextAttr_IsCharacterStyle_(NativePointer, attr);
            var m = n;
            return m;
        }
        
        public bool IsParagraphStyle(System.IntPtr attr)
        {
            CheckDisposed();
            var n = NativeApi.TextBoxTextAttr_IsParagraphStyle_(NativePointer, attr);
            var m = n;
            return m;
        }
        
        public bool IsDefault(System.IntPtr attr)
        {
            CheckDisposed();
            var n = NativeApi.TextBoxTextAttr_IsDefault_(NativePointer, attr);
            var m = n;
            return m;
        }
        
        
        [SuppressUnmanagedCodeSecurity]
        public class NativeApi : NativeApiProvider
        {
            static NativeApi() => Initialize();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr TextBoxTextAttr_Create_();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_Delete_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_Copy_(IntPtr obj, System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr TextBoxTextAttr_CreateTextAttr_();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetTextColor_(IntPtr obj, System.IntPtr attr, NativeApiTypes.Color colText);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetBackgroundColor_(IntPtr obj, System.IntPtr attr, NativeApiTypes.Color colBack);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetAlignment_(IntPtr obj, System.IntPtr attr, int alignment);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetFontPointSize_(IntPtr obj, System.IntPtr attr, int pointSize);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetFontStyle_(IntPtr obj, System.IntPtr attr, int fontStyle);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetFontWeight_(IntPtr obj, System.IntPtr attr, int fontWeight);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetFontFaceName_(IntPtr obj, System.IntPtr attr, string faceName);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetFontUnderlined_(IntPtr obj, System.IntPtr attr, bool underlined);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetFontUnderlinedEx_(IntPtr obj, System.IntPtr attr, int type, NativeApiTypes.Color colour);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetFontStrikethrough_(IntPtr obj, System.IntPtr attr, bool strikethrough);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetFontFamily_(IntPtr obj, System.IntPtr attr, int family);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern NativeApiTypes.Color TextBoxTextAttr_GetTextColor_(IntPtr obj, System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern NativeApiTypes.Color TextBoxTextAttr_GetBackgroundColor_(IntPtr obj, System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int TextBoxTextAttr_GetAlignment_(IntPtr obj, System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetURL_(IntPtr obj, System.IntPtr attr, string url);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetFlags_(IntPtr obj, System.IntPtr attr, long flags);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetParagraphSpacingAfter_(IntPtr obj, System.IntPtr attr, int spacing);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetParagraphSpacingBefore_(IntPtr obj, System.IntPtr attr, int spacing);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetLineSpacing_(IntPtr obj, System.IntPtr attr, int spacing);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetBulletStyle_(IntPtr obj, System.IntPtr attr, int style);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetBulletNumber_(IntPtr obj, System.IntPtr attr, int n);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetBulletText_(IntPtr obj, System.IntPtr attr, string text);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetPageBreak_(IntPtr obj, System.IntPtr attr, bool pageBreak);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetCharacterStyleName_(IntPtr obj, System.IntPtr attr, string name);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetParagraphStyleName_(IntPtr obj, System.IntPtr attr, string name);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetListStyleName_(IntPtr obj, System.IntPtr attr, string name);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetBulletFont_(IntPtr obj, System.IntPtr attr, string bulletFont);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetBulletName_(IntPtr obj, System.IntPtr attr, string name);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetTextEffects_(IntPtr obj, System.IntPtr attr, int effects);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetTextEffectFlags_(IntPtr obj, System.IntPtr attr, int effects);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetOutlineLevel_(IntPtr obj, System.IntPtr attr, int level);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern long TextBoxTextAttr_GetFlags_(IntPtr obj, System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int TextBoxTextAttr_GetFontSize_(IntPtr obj, System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int TextBoxTextAttr_GetFontStyle_(IntPtr obj, System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int TextBoxTextAttr_GetFontWeight_(IntPtr obj, System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_GetFontUnderlined_(IntPtr obj, System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int TextBoxTextAttr_GetUnderlineType_(IntPtr obj, System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern NativeApiTypes.Color TextBoxTextAttr_GetUnderlineColor_(IntPtr obj, System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_GetFontStrikethrough_(IntPtr obj, System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern string TextBoxTextAttr_GetFontFaceName_(IntPtr obj, System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int TextBoxTextAttr_GetFontFamily_(IntPtr obj, System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int TextBoxTextAttr_GetParagraphSpacingAfter_(IntPtr obj, System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int TextBoxTextAttr_GetParagraphSpacingBefore_(IntPtr obj, System.IntPtr attr);
